--- a/.gitignore
+++ b/.gitignore
@@ -229,3 +229,4 @@ fastlane/Preview.html
 fastlane/screenshots
 fastlane/test_output
 fastlane/readme.md
+Project_KeepFit/target/m2e-wtp/web-resources/META-INF/maven/com.teamsix/basic/pom.properties
